--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-header {
   min-height: 10vh;
   display: flex;
@@ -18,4 +14,11 @@
   align-items: center;
   justify-content: space-between;
   min-width: 40%;
+}
+
+.main-container {
+  min-height: 90vh;
+  margin: 0 300px;
+  padding: 20px;
+  box-sizing: border-box;
 }
