feat: change inputs to FormItem components

--- a/my-app/src/components/Form/Form.css
+++ b/my-app/src/components/Form/Form.css
@@ -17,6 +17,11 @@
   align-items: center;
 }
 
+.checkbox-item {
+  flex-direction: row;
+  justify-content: center;
+}
+
 .form-input {
   width: 100%;
 }
