--- a/my-app/src/components/Form/Form.css
+++ b/my-app/src/components/Form/Form.css
@@ -1,6 +1,6 @@
 .form {
   display: flex;
-  margin: 0px 80px;
+  margin: 0px 80px 20px;
   padding: 15px 25px;
   flex-direction: column;
   align-items: center;
