--- a/my-app/src/components/Form/Form.css
+++ b/my-app/src/components/Form/Form.css
@@ -1,7 +1,8 @@
 .form {
   display: flex;
-  margin: 0px 80px 20px;
+  margin: 0 auto 20px;
   padding: 15px 25px;
+  max-width: 800px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -23,9 +24,61 @@
 
 .form-input {
   width: 100%;
+  height: 40px;
+  font-weight: bold;
 }
 
 .error {
   color: #d90c23;
   transition: 0.2s;
+}
+
+.submit-btn {
+  padding: 14px 70px; 
+  margin-top: 15px;
+  border: none;
+  color: white;
+  background-color: #2196F3;
+  cursor: pointer; 
+}
+
+.submit-btn:hover {
+  background: #0b7dda;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: relative;
+  width: 60px;
+  height: 34px;
+  border-radius: 34px;
+  background-color: #ccc;
+  cursor: pointer;
+  transition: .4s;
+}
+
+.slider::before {
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 10%;
+  width: 26px;
+  height: 26px;
+  transform: translateY(-50%);
+  border-radius: 34px;
+  background-color: #fff;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  left: 90%;
+  transform: translate(-100%, -50%);
 }
