--- a/my-app/src/components/FormCard/FormCard.css
+++ b/my-app/src/components/FormCard/FormCard.css
@@ -1,7 +1,7 @@
 .form-card {
   display: flex;
-  width: 70%;
-  margin: 0 auto 10px;
+  /* max-width: 400px;
+  margin: 0 auto 10px; */
   padding-top: 10px;
   flex-direction: column;
   align-items: center;
@@ -11,6 +11,8 @@
 }
 
 .form-card__img {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  max-height: 300px;
 }
