feat: add country error

--- a/my-app/src/components/Form/Form.css
+++ b/my-app/src/components/Form/Form.css
@@ -46,6 +46,11 @@
   background: #0b7dda;
 }
 
+.submit-btn:disabled {
+  cursor: not-allowed;
+  background: #cccccc;
+}
+
 .switch input {
   opacity: 0;
   width: 0;
