--- a/my-app/src/components/Card/Card.css
+++ b/my-app/src/components/Card/Card.css
@@ -11,6 +11,7 @@
   align-items: center;
   text-align: center;
   box-shadow: 0px 0px 30px 0px rgb(34 60 80 / 20%);
+  cursor: pointer;
 }
 
 .card-img {
