feat: add MainSwitch(sort), add store sort types & remove waste code

--- a/my-app/src/components/ModalCard/ModalCard.css
+++ b/my-app/src/components/ModalCard/ModalCard.css
@@ -10,7 +10,7 @@
   background-color: rgba(0,0,0,0.5);
 }
 
-.modal-card {
+.card.modal-card {
   position: relative;
   flex-direction: row;
   border-radius: 5px;
