--- a/my-app/src/components/MainSwitch/MainSwitch.css
+++ b/my-app/src/components/MainSwitch/MainSwitch.css
@@ -1,6 +1,9 @@
 .main-switch {
-  margin-bottom: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 40px;
+  margin-bottom: 25px;
 }
 
 .main-sort {
