--- a/my-app/src/components/ModalCard/ModalCard.css
+++ b/my-app/src/components/ModalCard/ModalCard.css
@@ -12,36 +12,49 @@
 
 .card.modal-card {
   position: relative;
+  margin: 0 auto;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border-radius: 5px;
-  background-color: rgb(56 150 255 / 76%);
+  background-color: #282c34;
+  color: #bfbfbf;
   cursor: default;
+  font-size: 1.5em;
 }
 
-.modal-card__img {
-  width: 200px;
-  height: 200px;
+.status__info {
+  position: relative;
+  padding-left: 20px;
+}
+
+.status__info::before {
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 0%;
+  transform: translateY(-50%);
+  height: 0.7rem;
+  width: 0.7rem;
+  margin-right: 0.375rem;
+  background: rgb(85, 204, 68);
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.location__info {
+  margin-bottom: 5px;
+}
+
+.location__name {
+  margin-top: 0;
+}
+
+.card-img.modal-card__img {
+  width: 300px;
+  height: 300px;
 }
 
 .modal-card__info {
-  width: 300px;
-}
-
-.modal-card__content {
-  font-weight: bold;
-}
-
-.modal-card__btn {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  top: 5px;
-  right: 5px;
-  border: none;
-  background-image: url('../../assets/close.svg');
-  background-color: transparent;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  cursor: pointer;
+  width: 400px;
 }
