--- a/my-app/src/components/Card/Card.css
+++ b/my-app/src/components/Card/Card.css
@@ -1,14 +1,33 @@
 .card {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   box-shadow: 0px 0px 30px 0px rgb(34 60 80 / 20%);
   cursor: pointer;
+  transition: .1s;
 }
 
 .card-img {
   width: 200px;
   height: 200px;
   border-radius: 5px;
+}
+
+.card-img:hover {
+  filter: contrast(0.2);
+  transform: scale(1.05);
+  transition: .2s ease-in-out;
+}
+
+.card:hover::after {
+  position: absolute;
+  content: attr(data-title);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 500;
+  font-size: 2rem;
+  pointer-events: none;
 }
